(Fix) Added transition to svg path color change. Vertically aligned svg icons with text by pushing them up 1px.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -653,6 +653,13 @@ these styles are post-login */
   display: inline-block;
   vertical-align: top;
   padding: 0px 2px 0px 4px;
+  position: relative;
+  top: -1px;
+}
+
+.FormAddButtonIcon svg path {
+  fill: var(--COLOR_DARK);
+  transition: fill .15s ease-in-out !important;
 }
 
 .AddButtonContainer {
